# ScoutTeamMCP

./: .gitignore  README.md  ScoutTeam.py  ScoutTeamAPI.py  main.py  pyproject.toml  requirements.txt
