[project]
name = "scoutteammcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "fastmcp>=2.3.0",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
]
